UmsCollection: recognize Data CDs as collections

CHANGES:
 * Data CDs are now recognized in Amarok; patch by Anmol Ahuja.

BUG: 316128
FIXED-IN: 2.8
REVIEW: 109752
DIGEST: Amarok now recognizes Data CDs as collections